--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Exam</title>
     <link rel="stylesheet" href="./css/global.css" />
     <style>
       .loader , .div_loading {
@@ -121,7 +121,7 @@
             </div>
             <div class="services_bottom">
               <div class="box w-33 w-lg-50 w-md-100">
-                <img src="./img/image_services.svg" alt="" />
+                <img src="./img/image_services.svg" alt="image" />
                 <h3>What I can do for you</h3>
                 <p>
                   Faster, better products that your users <br />
@@ -134,7 +134,7 @@
                 </ul>
               </div>
               <div class="box w-33 w-lg-50 w-md-100">
-                <img src="./img/image_services.svg" alt="" />
+                <img src="./img/image_services.svg" alt="image" />
                 <h3>What I can do for you</h3>
                 <p>
                   Faster, better products that your users <br />
@@ -147,7 +147,7 @@
                 </ul>
               </div>
               <div class="box w-33 w-lg-50 w-md-100">
-                <img src="./img/image_services.svg" alt="" />
+                <img src="./img/image_services.svg" alt="image" />
                 <h3>What I can do for you</h3>
                 <p>
                   Faster, better products that your users <br />
@@ -180,7 +180,7 @@
                   width="100%"
                   height="249px"
                   src="./img/image_project.png"
-                  alt=""
+                  alt="image"
                 />
                 <p>Branding</p>
                 <h2>Soulful Rebrand</h2>
@@ -205,7 +205,7 @@
                   width="100%"
                   height="249px"
                   src="./img/image_project2.png"
-                  alt=""
+                  alt="image"
                 />
                 <p>Branding</p>
                 <h2>Soulful Rebrand</h2>
@@ -230,7 +230,7 @@
                   width="100%"
                   height="249px"
                   src="./img/image_project3.png"
-                  alt=""
+                  alt="image"
                 />
                 <p>Branding</p>
                 <h2>Soulful Rebrand</h2>
@@ -255,7 +255,7 @@
                   width="100%"
                   height="249px"
                   src="./img/image_project3.png"
-                  alt=""
+                  alt="image"
                 />
                 <p>Branding</p>
                 <h2>Soulful Rebrand</h2>
@@ -384,7 +384,7 @@
                     <span class="univercity">Stanford University</span>
                     <div class="top">
                       <span class="link_icon"
-                        ><img src="./img/arrowlink.svg" alt="" /></span
+                        ><img src="./img/arrowlink.svg" alt="image" /></span
                       ><br />
                     </div>
                     <span>MSc (Human Computer Interaction)</span>
@@ -396,7 +396,7 @@
                     <span class="univercity">Stanford University</span>
                     <div class="top">
                       <span class="link_icon"
-                        ><img src="./img/arrowlink.svg" alt="" /></span
+                        ><img src="./img/arrowlink.svg" alt="image" /></span
                       ><br />
                     </div>
                     <span>MSc (Human Computer Interaction)</span>
@@ -408,7 +408,7 @@
                     <span class="univercity">Stanford University</span>
                     <div class="top">
                       <span class="link_icon"
-                        ><img src="./img/arrowlink.svg" alt="" /></span
+                        ><img src="./img/arrowlink.svg" alt="image" /></span
                       ><br />
                     </div>
                     <span>MSc (Human Computer Interaction)</span>
@@ -435,7 +435,7 @@
                     <div class="top_div_work">
                       <span class="text_spacefleet"> SpaceFleet </span>
                       <span>
-                        <img src="img/arrowlink.svg" alt="" />
+                        <img src="img/arrowlink.svg" alt="image" />
                       </span>
                     </div>
                   </div>
@@ -461,7 +461,7 @@
                     <div class="top_div_work">
                       <span class="text_spacefleet"> SpaceFleet </span>
                       <span>
-                        <img src="img/arrowlink.svg" alt="" />
+                        <img src="img/arrowlink.svg" alt="image" />
                       </span>
                     </div>
                   </div>
@@ -487,7 +487,7 @@
                     <div class="top_div_work">
                       <span class="text_spacefleet"> SpaceFleet </span>
                       <span>
-                        <img src="img/arrowlink.svg" alt="" />
+                        <img src="img/arrowlink.svg" alt="image" />
                       </span>
                     </div>
                   </div>
@@ -550,12 +550,12 @@
                   </div>
                   <div class="div3__inner_2 w-50 df">
                     <button class="btn_testimonials">
-                      <img src="img/buttons_carousel_img_arrow.svg" alt="" />
+                      <img src="img/buttons_carousel_img_arrow.svg" alt="image" />
                     </button>
                     <button class="btn_testimonials btn_testimonials_right">
                       <img
                         src="img/buttons_carousel_img_arrow_right.svg"
-                        alt=""
+                        alt="image"
                       />
                     </button>
                   </div>
@@ -596,7 +596,7 @@
                   <div class="accordion-left" id="3">
                     <div class="accordion-left-top">
                       <span class="accordion_span1">What time-zone do you work in?</span>
-                      <span class="buttun" id="3"><img id="3" width="12.73px" src="./img/arrow-204-64.ico" alt=""></span>                  
+                      <span class="buttun" id="3"><img id="3" width="12.73px" src="./img/arrow-204-64.ico" alt="image"></span>                  
                     </div>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nobis aut eos magni, incidunt illo cupiditate excepturi perspiciatis iure inventore impedit consequatur ratione molestias nam blanditiis fugit error amet omnis.</p>
                   </div>
@@ -605,7 +605,7 @@
                   <div class="accordion-left" id="4">
                     <div class="accordion-left-top">
                       <span class="accordion_span1">What is the typical timeline for a project?</span>
-                      <span class="buttun" id="4"><img id="4" width="12.73px" src="./img/arrow-204-64.ico" alt=""></span>                  
+                      <span class="buttun" id="4"><img id="4" width="12.73px" src="./img/arrow-204-64.ico" alt="image"></span>                  
                     </div>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nobis aut eos magni, incidunt illo cupiditate excepturi perspiciatis iure inventore impedit consequatur ratione molestias nam blanditiis fugit error amet omnis.</p>
                   </div>
@@ -616,7 +616,7 @@
                   <div class="accordion-left" id="5">
                     <div class="accordion-left-top">
                       <span class="accordion_span1">How do you charge for projects ?</span>
-                      <span class="buttun" id="5"><img id="5" width="12.73px" src="./img/arrow-204-64.ico" alt=""></span>                  
+                      <span class="buttun" id="5"><img id="5" width="12.73px" src="./img/arrow-204-64.ico" alt="image"></span>                  
                     </div>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nobis aut eos magni, incidunt illo cupiditate excepturi perspiciatis iure inventore impedit consequatur ratione molestias nam blanditiis fugit error amet omnis.</p>
                   </div>
@@ -625,7 +625,7 @@
                   <div class="accordion-left" id="6">
                     <div class="accordion-left-top">
                       <span class="accordion_span1">What metrics do you use to measure success?</span>
-                      <span class="buttun" id="6"><img id="6" width="12.73px" src="./img/arrow-204-64.ico" alt=""></span>                  
+                      <span class="buttun" id="6"><img id="6" width="12.73px" src="./img/arrow-204-64.ico" alt="image"></span>                  
                     </div>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nobis aut eos magni, incidunt illo cupiditate excepturi perspiciatis iure inventore impedit consequatur ratione molestias nam blanditiis fugit error amet omnis.</p>
                   </div>
@@ -634,7 +634,7 @@
                   <div class="accordion-left" id="7">
                     <div class="accordion-left-top">
                       <span class="accordion_span1">What type of projects do you take on?</span>
-                      <span class="buttun" id="7"><img id="7" width="12.73px" src="./img/arrow-204-64.ico" alt=""></span>                  
+                      <span class="buttun" id="7"><img id="7" width="12.73px" src="./img/arrow-204-64.ico" alt="..."></span>                  
                     </div>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nobis aut eos magni, incidunt illo cupiditate excepturi perspiciatis iure inventore impedit consequatur ratione molestias nam blanditiis fugit error amet omnis.</p>
                   </div>
@@ -643,7 +643,7 @@
                   <div class="accordion-left" id="8">
                     <div class="accordion-left-top">
                       <span class="accordion_span1">What if I need help after the project is complete?</span>
-                      <span class="buttun" id="8"><img id="8" width="12.73px" src="./img/arrow-204-64.ico" alt=""></span>                  
+                      <span class="buttun" id="8"><img id="8" width="12.73px" src="./img/arrow-204-64.ico" alt="..."></span>                  
                     </div>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nobis aut eos magni, incidunt illo cupiditate excepturi perspiciatis iure inventore impedit consequatur ratione molestias nam blanditiis fugit error amet omnis.</p>
                   </div>
